# payme-mcp

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
src/: client.ts  index.ts
src/payme_mcp/: __init__.py  client.py  server.py  types.py
