[project]
name = "payme-mcp"
version = "0.1.0"
description = "MCP server for Payme payment system (Uzbekistan)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SirliAI", email = "hello@sirli.ai" },
]
keywords = ["mcp", "payme", "uzbekistan", "payments", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/sirliboyev-uz/payme-mcp"
Repository = "https://github.com/sirliboyev-uz/payme-mcp"
Issues = "https://github.com/sirliboyev-uz/payme-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/payme_mcp"]

[project.scripts]
payme-mcp = "payme_mcp.server:main"
